# goworld-example

./: .gitignore  Cargo.toml  README.md  go.mod
client/cocos/: README.md  events.md  mock_handlers.ts
cmd/server/: main.go
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/lobby/: Cargo.toml
crates/lobby/src/: main.rs
crates/room/: Cargo.toml
crates/room/src/: main.rs
crates/table/: Cargo.toml
crates/table/src/: main.rs
docs/: DEPLOY.md
internal/config/: config.go
internal/dao/: datastore.go
internal/log/: logger.go
internal/modules/account/: service.go
internal/modules/bag/: service.go
internal/modules/chat/: service.go
internal/modules/item/: service.go
internal/modules/mail/: service.go
internal/modules/match/: service.go
internal/modules/notice/: service.go
internal/modules/player/: service.go
internal/modules/room/: service.go
internal/modules/shop/: service.go
internal/redis/: cache.go
internal/server/: router.go
scripts/: devstack.sh
