[workspace]
members = [
    "crates/common",
    "crates/gateway",
    "crates/lobby",
    "crates/room",
    "crates/table",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Mahjong Systems"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
redis = { version = "0.24", features = ["tokio-comp"] }
rand = "0.8"
